customize project add some library and set fully dark theme

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     <section class="app-bg"></section>
     <section class="app">
       <header class="header" id="header">
-        <section class="sidebar-header bg-blue">
+        <section class="sidebar-header bg-dark">
           <div class="d-flex justify-content-between flex-md-row-reverse px-3">
             <span id="sidebar-toggle-show" class="d-inline d-md-none"
               ><i class="bi bi-toggle2-off c-pointer"></i
@@ -23,7 +23,7 @@
             <span id="sidebar-toggle-hide" class="d-none d-md-inline"
               ><i class="bi bi-toggle2-on c-pointer"></i
             ></span>
-            <h2 class="header-logo">Panel name</h2>
+            <h2 class="header-logo">نام پروژه</h2>
             <span id="sidebar-menu-toggle" class="d-md-none"
               ><i class="bi bi-three-dots c-pointer"></i
             ></span>
@@ -408,7 +408,7 @@
       </header>
 
       <section class="body-container d-flex">
-        <aside id="sidebar" class="sidebar bg-soft-blue">
+        <aside id="sidebar" class="sidebar bg-soft-dark">
           <div class="sidebar-container">
             <div class="sidebar-wrapper scroll-hide">
               <a href="#" class="sidebar-link">
@@ -416,6 +416,18 @@
                   class="bi bi-house icon-position-fix-md ms-2 sidebar-icon"
                 ></i>
                 <span>خانه</span>
+              </a>
+              <a href="sub_index.html" class="sidebar-link">
+                <i
+                  class="bi bi-house icon-position-fix-md ms-2 sidebar-icon"
+                ></i>
+                <span>sub_index</span>
+              </a>
+              <a href="sub_create.html" class="sidebar-link">
+                <i
+                  class="bi bi-house icon-position-fix-md ms-2 sidebar-icon"
+                ></i>
+                <span>sub_create</span>
               </a>
               <div class="sidebar-part-title fw-bold">بخش محتوی</div>
               <hr />
@@ -485,8 +497,6 @@
               <a
                 href="#"
                 class="text-decoration-none d-block mb-4 gradient"
-                onmousemove="gradiant(this)"
-                onmouseout="removeGradiant(this)"
               >
                 <div class="card text-white car-custom-color">
                   <div class="card-body">
@@ -511,8 +521,6 @@
               <a
                 href="#"
                 class="text-decoration-none d-block mb-4 gradient"
-                onmousemove="gradiant(this)"
-                onmouseout="removeGradiant(this)"
               >
                 <div class="card car-custom-color text-white">
                   <div class="card-body">
@@ -537,8 +545,6 @@
               <a
                 href="#"
                 class="text-decoration-none d-block mb-4 gradient"
-                onmousemove="gradiant(this)"
-                onmouseout="removeGradiant(this)"
               >
                 <div class="card car-custom-color text-white">
                   <div class="card-body">
@@ -563,8 +569,6 @@
               <a
                 href="#"
                 class="text-decoration-none d-block mb-4 gradient"
-                onmousemove="gradiant(this)"
-                onmouseout="removeGradiant(this)"
               >
                 <div class="card car-custom-color text-white">
                   <div class="card-body">
@@ -589,8 +593,6 @@
               <a
                 href="#"
                 class="text-decoration-none d-block mb-4 gradient"
-                onmousemove="gradiant(this)"
-                onmouseout="removeGradiant(this)"
               >
                 <div class="card car-custom-color text-white">
                   <div class="card-body">
@@ -615,8 +617,6 @@
               <a
                 href="#"
                 class="text-decoration-none d-block mb-4 gradient"
-                onmousemove="gradiant(this)"
-                onmouseout="removeGradiant(this)"
               >
                 <div class="card car-custom-color text-white">
                   <div class="card-body">
@@ -641,8 +641,6 @@
               <a
                 href="#"
                 class="text-decoration-none d-block mb-4 gradient"
-                onmousemove="gradiant(this)"
-                onmouseout="removeGradiant(this)"
               >
                 <div class="card car-custom-color text-white">
                   <div class="card-body">
@@ -667,8 +665,6 @@
               <a
                 href="#"
                 class="text-decoration-none d-block mb-4 gradient"
-                onmousemove="gradiant(this)"
-                onmouseout="removeGradiant(this)"
               >
                 <div class="card car-custom-color text-white">
                   <div class="card-body">
